kubernetes/fastAPI/fastAPI-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
  labels:
    app: fastapi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi
        image: opa/fastapi:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
