kubernetes/fastAPI/fastAPI-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
spec:
  defaultBackend:
    service:
      name: fastapi-service
      port:
        number: 8001
